sample-node-app/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-pytthon-app
  namespace: service
  labels:
    app: sample-pytthon-app
spec:
  selector:
    matchLabels:
      app: sample-pytthon-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-pytthon-app
    spec:
      containers:
        - name: service
          image: farissatyaw/sample-pytthon-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 10
