sample-node-app/deployments/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: ingress-service
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    kubernetes.io/ingress.class: alb
  name: sample-node-app-ingress
  namespace: node
spec:
  rules:
    - host: "node.domain.com"
      http:
        paths:
          - backend:
              service:
                name: sample-node-app
                port:
                  number: 80
            path: /
            pathType: Prefix
